--- a/web/styles.css
+++ b/web/styles.css
@@ -66,7 +66,7 @@ header img {
     color: var(--primary-color);
     margin-top: auto;
     height: 100%;
-    width: var(--code-width);
+    min-width: var(--code-width);
     border: none;
     border-right: var(--header-border) solid var(--primary-color);
     resize: none;
@@ -91,7 +91,7 @@ header img {
 #debugger-wrapper {
     display: flex;
     flex-direction: column;
-    width: calc(100vw - var(--code-width) - var(--header-border));
+    width: 100%;
     background: var(--secondary-color);
 }
 
