Add share feature

--- a/web/styles.css
+++ b/web/styles.css
@@ -33,6 +33,8 @@ header {
 }
 
 header {
+    display: flex;
+    flex-direction: row;
     background: var(--background-color);
     position: fixed;
     top: 0;
@@ -45,6 +47,28 @@ header {
 header img {
     height: 100%;
     margin-left: var(--logo-offset);
+}
+
+header #share {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    font-size: 1em;
+    font-weight: bolder;
+    padding: 10px;
+    margin: 0;
+    margin-left: auto;
+    margin-right: 30px;
+    align-self: center;
+    align-items: center;
+    background: var(--secondary-color);
+    color: var(--primary-color);
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+header #share:hover {
+    background: var(--tertiary-color);
 }
 
 #content {
@@ -91,7 +115,7 @@ header img {
 #console-wrapper {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: calc(100vw - var(--code-width));
     background: var(--secondary-color);
 }
 
